Changelog
---------

v0.7.4
^^^^^^
- Use https for google webfonts


v0.7.3
^^^^^^
- Fix anonymoususer logout

v0.7.1
^^^^^^
- ASTAKOS_*_MESSAGES settings changed from dict to tuple lists
- Theme changes (new colors, new font)

v0.7.0
^^^^^^
- Rename management commands
- Optionally renew token on password change
- Preserve local password for users switched to shibboleth
- Send notification to ASTAKOS_DEFAULT_CONTACT_EMAIL on account activation
- Fix unusable password issue
- Extend user_update command by enabling provider modification and password renewal
- Check for email absence before querying the database for retrieving the user in get menu call
- Set is_verified in profile view even if the user do not post the form
- New html/css theme
- Database updated.
  Use::
  	
	$ snf-manage syncdb
	$ snf-manage migrate

  to migrate your database.

v0.6.2
^^^^^^
- fixed signup/profile/global user notifications display


v0.6.1
^^^^^^
- skip csrf on login requests


v0.6
^^^^
- Fixed default values in cloudbar sample conf file
- Split api in admin (accessed by superuser and privileged users) and service 
  (accessed by services)
- Dynamically register/unregister services 
  
  Setting ``ASTAKOS_CLOUD_SERVICES`` is no longer used. You should remove
  it from astakos configuration file and migrate the old services configuration
  using ``snf-manage registerservice`` commands::

  	$ snf-manage registerservice "grnet cloud" https://okeanos.grnet.gr/ home-icon.png
  	$ snf-manage registerservice "cyclades" https://cyclades.okeanos.grnet.gr/ui/
  	$ snf-manage registerservice "pithos" https://pithos.okeanos.grnet.gr/

- New management tools for assigning groups and permissions to users
- New feedback api call
- Save the date user activation sent
- Save email returned by shibboleth
- Add logging for main astakos functionality.
  Logging level controlled by ASTAKOS_LOGGING_LEVEL setting.
- Email change mechanism